# zkMarket_code

./: README.md
snark/: Cargo.toml  README.md  crs_1MB_vk
snark/src/: lib.rs  test.json
snark/src/accepttrade/: circuit.rs
snark/src/accepttrade/tests/: mod.rs  test_accepttrade.rs
snark/src/api/: buffer.rs  buffer_error.rs  ffi_result.rs  mod.rs  rw.rs  safe_buffer.rs  serialize.rs
snark/src/api/cc_groth16/: commitment.rs  mod.rs  proof.rs  rw.rs  vk.rs
snark/src/api/generatetrade/: api.rs  mod.rs
snark/src/api/generatetrade/structure/: constants.rs  inputs.rs  mod.rs  statement.rs  witnesses.rs
snark/src/api/groth16/: mod.rs  proof.rs  vk.rs
snark/src/api/tests/: mod.rs  test_api_generate.rs
snark/src/cc_snark/: mod.rs
snark/src/cc_snark/cc_gro/: constraints.rs  data_structure.rs  generator.rs  mod.rs  prover.rs  r1cs_to_qap.rs  test.rs  verifier.rs
snark/src/gadget/: mod.rs
snark/src/gadget/hashes/: constraints.rs  mod.rs
snark/src/gadget/hashes/mimc7/: constraints.rs  mod.rs  parameters.rs
snark/src/gadget/merkle_tree/: constraints.rs  mocking.rs  mod.rs
snark/src/gadget/nullifiable_encryptions/: constraints.rs  mod.rs
snark/src/gadget/nullifiable_encryptions/elgamalnenc/: constraints.rs  mod.rs
snark/src/gadget/public_encryptions/: mod.rs
snark/src/gadget/public_encryptions/elgamal/: constraints.rs  mod.rs
snark/src/gadget/symmetric_encrytions/: mod.rs
snark/src/gadget/symmetric_encrytions/symmetric/: constraints.rs  mod.rs
snark/src/gadget/tests/: mod.rs  test_merkle_tree_mimc.rs
snark/src/generatetrade/: circuit.rs  mod.rs
snark/src/generatetrade/tests/: mod.rs  test_generatetrade.rs
snark/src/registerdata/: circuit.rs  mod.rs
snark/src/registerdata/tests/: mod.rs  test_registerdata.rs
